(lang dune 3.0)

(name dedupe_ml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Navin Keswani")

(maintainers "Navin Keswani")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name dedupe_ml)
 (synopsis "Find duplicate files")
 (description "Find duplicate files")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
